--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <% for (var css in static.css) { %>
-        <link href="<%= static.css[css] %>" rel="stylesheet">
+        <link href="<%= static.staticUrl+static.css[css] %>" rel="stylesheet">
     <% } %>
     <title>会购后台管理系统</title>
     <script>
@@ -17,7 +17,7 @@
 <body>
     <div id="root"></div>
     <% for (var js in static.js) { %>
-    <script type="text/javascript" src="<%= static.js[js]%>"></script>
+    <script type="text/javascript" src="<%= static.staticUrl+static.js[js]%>"></script>
     <% } %>
 </body>
 </html>
